implement constant propagation